made page responsive

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 </head>
 <body class="bg-blue-300">
     <!--main wrapper-->
-<div class="bg-gray-100  h-4/5 m-14 m-h-full p-10 shadow-lg rounded relative">
-    <div class="relative lg:left-20">
+<div class="bg-gray-100 h-4/5 lg:m-14 m-h-full p-10 shadow-lg rounded relative">
+    <div class="relative lg:left-20 md:left-20">
     <div class="flex flex-col items-start">
         <h2 class="text-3xl font-bold">Confirm order and pay</h2>
-        <p class="text-gray-400 w-2/5 mt-2">Please make the payment, after that you can enjoy all the features and benefit</p>
+        <p class="text-gray-400 lg:w-2/5 mt-2">Please make the payment, after that you can enjoy all the features and benefit</p>
         </div>
-     <div class="flex space-x-8 md:flex-col sm:flex-col lg:flex-row"><!--payment card div-->
+     <div class=" lg:space-x-8 lg:flex md:flex-col lg:flex-row"><!--payment card div-->
         <div class="bg-gray-50 p-6 rounded shadow-lg mt-8 md:w-3/4 lg:w-2/4">
            <h3 class="font-bold text-l my-5">PAYMENT METHODS</h3>
            <div class="flex space-x-4">
@@ -28,22 +28,22 @@
                 <label class="text-gray-400">Cardholder name</label>
                  <input class="w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
             </div>
-            <div class="flex space-x-4"><!--form input div-->
-                <div class=" flex flex-col">
+            <div class="sm:flex lg:space-x-4"><!--form input div-->
+                <div class="flex flex-col">
                     <label class="text-gray-400">Card Number</label>
-                     <input class="lg:w-56 md:w-44 bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
+                     <input class="lg:w-56 md:w-44 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
                 </div>
                 <div class="flex flex-col">
                     <label class="text-gray-400">Date</label>
-                     <input class="lg:w-28 md:w-24 bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
+                     <input class="lg:w-28 md:w-24 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
                 </div>
                 <div class="flex flex-col">
                     <label class="text-gray-400">CVV</label>
-                     <input class="lg:w-28 md:w-24 bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
+                     <input class="lg:w-28 md:w-24 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
                 </div>
             </div>
         </div>
-        <div class="bg-blue-400 lg:w-1/4 md:w-4/6 mx-auto shadow-lg rounded mt-8">
+        <div class="bg-blue-400 sm:w-11/12 lg:w-1/4 md:w-4/6 mx-auto shadow-lg rounded mt-8">
        <p class="font-bold text-blue-200 p-5">You have to pay <br><span class="text-5xl text-gray-50">549</span>.99 USD</p>
       <div class="p-5">
           <h3 class="text-gray-100 font-bold text-blue-200">Company</h3>
@@ -59,8 +59,8 @@
     </div>
     </div>
      </div> 
-     <div class="flex items-center lg:space-x-80 md:space-x-56 py-5">
-     <a href="">Previous step</a>
+     <div class="flex items-center lg:space-x-80 md:space-x-56 space-x-24 py-5">
+     <a href="#">Previous step</a>
      <button class="bg-blue-400 text-gray-50 shadow-lg rounded p-2 hover:bg-blue-500 font-bold hover:shadow-2xl">Pay 549.99 USD</button>
 </div>
     </div> 
