--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
                 </div>
                 <div class="flex flex-col">
                     <label class="text-gray-400">Date</label>
-                     <input class="lg:w-28 md:w-24 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
+                     <input class="lg:w-32 md:w-24 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
                 </div>
                 <div class="flex flex-col">
                     <label class="text-gray-400">CVV</label>
-                     <input class="lg:w-28 md:w-24 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
+                     <input class="lg:w-32 md:w-24 w-full bg-gray-300 py-3 px-3 shadow-xl my-3 focus:outline-none focus:bg-blue-300 text-gray-50 focus:ring-2 focus:ring-gray-400 rounded" />
                 </div>
             </div>
         </div>
@@ -59,9 +59,11 @@
     </div>
     </div>
      </div> 
-     <div class="flex items-center lg:space-x-80 md:space-x-64 space-x-24 py-3">
+     <div class="flex items-center lg:space-x-80 md:space-x-64 space-x-24 py-5">
      <a href="#" class="ml-8">Previous step</a>
-     <button class="bg-blue-400 text-gray-50 shadow-lg rounded p-2 hover:bg-blue-500 font-bold hover:shadow-2xl">Pay 549.99 USD</button>
+     <button type="button" onclick="Animation" class="animate-pulse animate-bounce bg-blue-400 text-gray-50 shadow-lg rounded p-2 hover:bg-blue-500 font-bold hover:shadow-2xl">
+   
+        Pay 549.99 USD</button>
 </div>
     </div> 
 </div>
