--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
      </div> 
      <div class="flex items-center lg:space-x-80 md:space-x-64 space-x-24 py-5">
      <a href="#" class="ml-8">Previous step</a>
-     <button type="button" onclick="Animation" class="animate-pulse animate-bounce bg-blue-400 text-gray-50 shadow-lg rounded p-2 hover:bg-blue-500 font-bold hover:shadow-2xl">
+     <button type="button" class=" animate-bounce bg-blue-400 text-gray-50 shadow-lg rounded p-2 hover:bg-blue-500 font-bold hover:shadow-2xl">
    
         Pay 549.99 USD</button>
 </div>
